Added home link to name

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,7 +22,7 @@ const colorNavigation = "bg-zinc-900 dark:bg-zinc-300";
             class=`flex flex-col basis-1/5 items-center min-w-[200px] px-4 border-r border-zinc-500 ${colorTheme}`>
             <section class="flex flex-col justify-start w-full">
                 <h1 class="text-3xl text-center font-bold my-2">
-                    Olivier Tramis
+                    <a href="/">Olivier Tramis</a>
                 </h1>
                 <p class="text-xl text-center font-bold">
                     International researcher
