--- a/src/pages/research/index.astro
+++ b/src/pages/research/index.astro
@@ -7,7 +7,7 @@ const pageTitle = "Research";
 <BaseLayout {pageTitle}>
     <h2 class="text-4xl font-bold mt-7">{pageTitle}</h2>
     <article
-        class="flex flex-row justify-evenly items-center w-full h-full max-[920px]:flex-col max-[920px]:justify-evenly">
+        class="flex flex-row justify-evenly items-center gap-5 w-full h-full max-[920px]:flex-col max-[920px]:justify-evenly">
         <section class="border border-zinc-500 rounded w-52 h-52">
             <a
                 href="/research/health"
@@ -30,7 +30,7 @@ const pageTitle = "Research";
                 class="flex flex-col justify-center items-center text-centerw-full h-full">
                 <figure class="flex flex-col items-center">
                     <img
-                        src="assets/environment.svg"
+                        src="/assets/environment.svg"
                         alt="Environment icon"
                         width="140"
                     />
@@ -46,7 +46,7 @@ const pageTitle = "Research";
                 class="flex flex-col justify-center items-center w-full h-full">
                 <figure class="flex flex-col items-center">
                     <img
-                        src="assets/adhesion.svg"
+                        src="/assets/adhesion.svg"
                         alt="Adhesion icon"
                         width="140"
                     />
