--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pageTitle = "Home";
 <BaseLayout {pageTitle}>
     <h2 class="text-4xl font-bold mt-7">Home</h2>
     <div class="flex flex-row justify-center items-center w-full">
-        <article class="grid grid-cols-2 grid-flow-row gap-15">
+        <article class="flex flex-col xl:grid grid-cols-2 grid-flow-row gap-15">
             <section class="row-start-1 row-end-3">
                 <figure class="flex flex-col justify-center items-center">
                     <figcaption>Text for the first image</figcaption>
